syntax = "proto3";

package net.cydhra.acromantula.proto;

import "google/protobuf/empty.proto";

option java_multiple_files = true;

service WorkspaceService {
  rpc listTasks (google.protobuf.Empty) returns (TaskListResponse);

  rpc listFiles (ListFilesCommand) returns (ListFilesResponse);
}
message TaskListResponse {
  repeated Task tasks = 1;
}

message Task {
  int32 taskId = 1;
  string taskTitle = 2;
  string taskStatus = 3;
  bool finished = 4;
}

message ListFilesCommand {
  int32 fileId = 1;
  string filePath = 2;
}

message ListFilesResponse {
  repeated FileEntity trees = 1;
}

message FileEntity {
  int32 id = 1;
  string name = 2;
  bool isDirectory = 3;
  repeated FileEntity children = 4;
}

